Added data and presentation layers

--- a/lib/core/localization/l10n/app_en.arb
+++ b/lib/core/localization/l10n/app_en.arb
@@ -1,11 +1,5 @@
 {
-  "hello": "Hello World!",
-  "helloParam": "Hello {param}",
-  "@helloParam": {
-    "placeholders": {
-      "param": {
-        "type": "String"
-      }
-    }
-  }
+  "timeline": "Timeline",
+  "marvelCinematicUniverse": "Marvel cinematic universe",
+  "errSomethingWentWrong": "Oops, something went wrong"
 }
