--- a/lib/core/localization/l10n/app_pt.arb
+++ b/lib/core/localization/l10n/app_pt.arb
@@ -1,4 +1,5 @@
 {
-  "hello": "Olá Mundo!",
-  "helloParam": "Olá {param}"
+  "timeline": "Linha do tempo",
+  "marvelCinematicUniverse": "Marvel cinematic universe",
+  "errSomethingWentWrong": "Oops, parece que algo deu errado."
 }
