Added movie details screen

--- a/lib/core/localization/l10n/app_en.arb
+++ b/lib/core/localization/l10n/app_en.arb
@@ -1,5 +1,13 @@
 {
   "timeline": "Timeline",
   "marvelCinematicUniverse": "Marvel cinematic universe",
-  "errSomethingWentWrong": "Oops, something went wrong"
+  "errSomethingWentWrong": "Oops, something went wrong",
+  "rating": "Rating: {rating}/10",
+  "@rating": {
+    "placeholders": {
+      "rating": {
+        "type": "String"
+      }
+    }
+  }
 }
