--- a/lib/core/localization/l10n/app_pt.arb
+++ b/lib/core/localization/l10n/app_pt.arb
@@ -1,5 +1,6 @@
 {
   "timeline": "Linha do tempo",
   "marvelCinematicUniverse": "Marvel cinematic universe",
-  "errSomethingWentWrong": "Oops, parece que algo deu errado."
+  "errSomethingWentWrong": "Oops, parece que algo deu errado.",
+  "rating": "Avaliação: {rating}/10"
 }
